...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
    >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_input_layout"
            style="?attr/questionnaireTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:endIconDrawable="@drawable/gm_calendar_today_24"
            app:endIconMode="custom"
...
        <Space
            android:layout_width="@dimen/date_picker_and_time_picker_gap"
            android:layout_height="match_parent"
        />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/time_input_layout"
            style="?attr/questionnaireTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:endIconDrawable="@drawable/gm_schedule_24"
            app:endIconMode="custom"
            app:errorIconDrawable="@null"
            app:hintEnabled="true"
        >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/time_input_edit_text"
                style="?attr/questionnaireTextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/time"
                android:inputType="none"
...
